# sem2laba5

./: CMakeLists.txt  main.cpp
task1/: utils.h
task2/: utils.cpp  utils.h
task3/: Matrix.h
task4/: Polynomial.cpp  Polynomial.h  Rational.cpp  Rational.h
